sidebar halhway done

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: 'mulish', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #181818;
     color: white;
@@ -29,6 +33,10 @@ p {
     border-radius: 10px;
 }
 
+#nav-container > i#listMenu {
+    display: none;
+}
+
 #nav-container > .nav-bar {
     height: 40px;
     display: flex;
@@ -42,29 +50,49 @@ p {
     font-size: 1.3rem;
 }
 
-#hero {
+div#sidebar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 16px;
+    border-bottom: 1px solid black;
+}
+
+div#sidebar > ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 16px;
+    list-style: none;
+    padding: 16px;
+    margin-top: 16px;
+}
+
+#home {
     width: 100%;
     height: auto;
 }
 
-#hero > h1 {
+#home > h1 {
     margin: 10% auto 0 auto;
     text-align: center;
     font-size: 4rem;
 }
 
-#hero > h1 > span {
+#home > h1 > span {
     color: rgb(120, 140, 145);
 }
 
-#hero > p {
+#home > p {
     margin-top: 30px;
     text-align: center;
     font-size: 16px;
     font-weight: 200;
 }
 
-#about-me {
+#about {
     margin: 20% auto 0 auto;
     width: 75%;
     display: flex;
@@ -72,24 +100,24 @@ p {
     gap: 10%;
 }
 
-#about-me > #left > .text {
+#about > #left > .text {
     text-align: left;
 }
 
-#about-me > #left > .text > h2 {
+#about > #left > .text > h2 {
     margin-bottom: 5%;
 }
 
-#about-me > #left > .text > p {
+#about > #left > .text > p {
     line-height: 35px;
 }
 
-#about-me > #left > .fun-facts {
+#about > #left > .fun-facts {
     height: 300px;
     background-color: aqua;
 }
 
-#about-me > img {
+#about > img {
     width: 450px;
     height: 3%;
     border-radius: 20px;
@@ -132,4 +160,26 @@ footer > #social-media > div > img {
 footer > #social-media > div > h3 {
     height: 30px;
     margin: 23px 0 0 20px;
+}
+
+@media (max-width: 470px) {
+    
+    #nav-container {
+        width: 100%;
+        height: 50px;
+        background-color: #1d1a1a;
+        border-radius: 0;
+        top: 0;
+    }
+
+    #nav-container > i#listMenu {
+        display: block;
+        font-size: 30px;
+        text-align: right;
+        padding: 5px 10px 10px 0;
+    }
+
+    #nav-container > .nav-bar{
+        display: none;
+    }
 }
