--- a/style.css
+++ b/style.css
@@ -16,12 +16,13 @@ body {
 }
 
 h1 {
-    font-size: 3.5rem;
+    font-size: 2.7rem;
     font-weight: 400;
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+    font-weight: 370;
 }
 
 p {
@@ -29,7 +30,7 @@ p {
     font-weight: 300;
 }
 
-#nav-container {
+#navContainer {
     width: 55%;
     margin: 0 auto;
     position: sticky;
@@ -39,35 +40,41 @@ p {
     background-color: #cfc9c9;
 }
 
-#nav-container > .nav-bar > img {
+#navContainer > .nav-bar > i {
+    margin-left: 30px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+#navContainer > .nav-bar > img {
     display: block;
     margin: 0 70px 0 130px;
 }
 
-#nav-container > img {
+#navContainer > img {
     display: none;
 }
 
-#nav-container > i#listMenu {
+#navContainer > i#listMenu {
     display: none;
     margin-top: 1%;
     font-size: 30px;
 }
 
-#nav-container > .nav-bar {
+#navContainer > .nav-bar {
     height: 50px;
     display: flex;
     align-items: center;
 }
 
-#nav-container > .nav-bar > a {
+#navContainer > .nav-bar > a {
     margin-right: 50px;
     text-decoration: none;
     font-size: 1.1rem;
     color: black;
 }
 
-#nav-container > .nav-bar > a:hover {
+#navContainer > .nav-bar > a:hover {
     text-decoration: underline;
     font-size: 1.2rem;
     color: #00a0dc;
@@ -137,9 +144,9 @@ div#sidebar > ul > li > a:hover {
     text-decoration: underline;
 }
 
-#home {
+#hero {
     width: 90%;
-    margin: 12% auto 0 auto;
+    margin: 7% auto 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -149,27 +156,27 @@ div#sidebar > ul > li > a:hover {
     text-align: left;
 }
 
-#home > img {
-    width: 450px;
-    height: 500px;
+#hero > img {
+    width: 25%;
+    height: 25%;
     border-radius: 50%;
 }
 
-#home > #homeText > h3 {
+#hero > #heroText > h3 {
     margin-top: 15px;
 }
 
-#home > #homeText > h1 {
+#hero > #heroText > h1 {
     margin-top: 10px;
 }
 
-#home > #homeText > p {
+#hero > #heroText > p {
     margin-top: 30px;
 }
 
 #about {
     margin: 20% auto 0 auto;
-    width: 75%;
+    width: 90%;
 }
 
 #about h1 {
@@ -191,7 +198,8 @@ div#sidebar > ul > li > a:hover {
 #about > #box > .text > #insideBox {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 3%;
 }
 
 #about > #box > .text > #insideBox > div {
@@ -199,7 +207,7 @@ div#sidebar > ul > li > a:hover {
     margin-top: 70px;
     padding: 10px;
     border-radius: 20px;
-    background-color: #82d0e6;
+    background-color: #e9f2f5;
 }
 
 #about > #box > .text > #insideBox > div h2 {
@@ -212,8 +220,8 @@ div#sidebar > ul > li > a:hover {
 }
 
 #about > #box > .img img {
-    width: 450px;
-    height: 95%;
+    width: 75%;
+    height: 90%;
     border-radius: 20px;
 }
 
@@ -367,7 +375,7 @@ footer > #social-media {
 }
 
 footer > #social-media > div {
-    width: 20%;
+    width: 21%;
     height: 90px;
     cursor: pointer;
     display: flex;
@@ -416,6 +424,10 @@ footer > #social-media > div > h3 {
     margin: 20px 0 0 10px;
 }
 
+footer > #social-media > div > h3 p {
+    font-size: 17px;
+}
+
 footer > p {
     text-align: center;
     margin: 50px auto;
@@ -439,7 +451,7 @@ footer > p {
         font-size: 0.7rem;
     }
 
-    #nav-container {
+    #navContainer {
         width: 100%;
         height: 50px;
         display: flex;
@@ -452,15 +464,15 @@ footer > p {
         z-index: 1;
     }
 
-    #nav-container > img {
+    #navContainer > img {
         display: block;
     }
 
-    #nav-container > i#listMenu {
+    #navContainer > i#listMenu {
         display: inline-block;
     }
 
-    #nav-container > .nav-bar{
+    #navContainer > .nav-bar{
         display: none;
     }
 
@@ -468,7 +480,7 @@ footer > p {
         display: block; 
     }
     
-    #home {
+    #hero {
         width: 90%;
         margin: 12% auto 0 auto;
         flex-direction: column-reverse;
@@ -477,20 +489,20 @@ footer > p {
         text-align: center;
     }
     
-    #home > img {
+    #hero > img {
         width: 175px;
         height: 200px;
     }
     
-    #home > #homeText > h3 {
+    #hero > #heroText > h3 {
         margin-top: 20px;
     }
     
-    #home > #homeText > h1 {
+    #hero > #heroText > h1 {
         margin-top: 15px;
     }
     
-    #home > #homeText > p {
+    #hero > #heroText > p {
         margin-top: 20px;
     }
 
