--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ h2 {
     font-weight: 370;
 }
 
+h3 {
+    font-size: 20px;
+    font-weight: 450;
+}
+
 p {
     font-size: 18px;
     font-weight: 300;
@@ -37,7 +42,7 @@ p {
     top: 2.5%;
     border-radius: 10px;
     z-index: 999;
-    background-color: #cfc9c9;
+    background-color: #e6e2e2;
 }
 
 #navContainer > .nav-bar > i {
@@ -264,8 +269,6 @@ div#sidebar > ul > li > a:hover {
 
 #projects > #container > div h3 {
     margin-bottom: 7%;
-    font-size: 25px;
-    font-weight: 450;
 }
 
 #projects > #container > div button {
@@ -273,6 +276,7 @@ div#sidebar > ul > li > a:hover {
     padding: 5px;   
     cursor: pointer;
     color: #00a0dc;
+    border-radius: 20px;
     border-color: #5abff5;
 }
 
@@ -347,28 +351,77 @@ div#sidebar > ul > li > a:hover {
     background-color: orange;
 }
 
+#contact {
+    width: 90%;
+    margin: 0 auto;
+}
+
+#contact h1 {
+    padding-top: 1%;
+    text-align: center;
+}
+
+#contact > #emailContainer {
+    width: 40%;
+    height: 430px;
+    margin: 5% auto;
+    display: flex;
+    justify-content: center;
+    border-radius: 20px;
+    background-color: #f3f1f1;
+}
+
+#contact > #emailContainer > #emailBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#contactInput1, #contactInput2, #contactInput3 {
+    width: 500px;
+    height: 50px;
+    padding-left: 10px;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    font-weight: 400;
+    color: #666;
+    background-color: #ffffff;
+}
+
+#contact > #emailContainer > #emailBox > textarea {
+    height: 140px;
+    padding-top: 20px;
+    border-radius: 20px;
+}
+
+#contact > #emailContainer > #emailBox > button {
+    width: 150px;
+    height: 40px;
+    margin: 0 auto;
+    cursor: pointer;
+    border-radius: 20px;
+    color: #00a0dc;
+    border-color: #5abff5;
+}
+
 footer {
     width: 100%;
-    height: 500px;
-    margin-top: 11%;
+    height: 400px;
+    margin-top: 10%;
     text-align: center;
-    background-color: #e6e2e2;;
+    background-color: #e6e2e2;
 }
 
 footer > img {
-    margin-top: 30px;
+    margin-top: 70px;
     width: 100px; 
     height: 100px; 
     border-radius: 50%;
 }
 
-footer h1 {
-    padding-top: 1%;
-    text-align: center;
-}
-
 footer > #social-media {
-    padding-top: 4%;
+    padding-top: 2.5%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -377,13 +430,13 @@ footer > #social-media {
 footer > #social-media > div {
     width: 21%;
     height: 90px;
-    cursor: pointer;
     display: flex;
     flex-direction: row;
     text-align: left;
     border: 0;
     border-radius: 20px;
     outline: 0;
+    cursor: pointer;
 }
 
 footer > #social-media > div.instagram,
@@ -585,13 +638,28 @@ footer > p {
         font-size: 13px;
     }
 
+    #contact > #emailContainer {
+        width: 90%;
+    }
+    
+    #contactInput1, #contactInput2, #contactInput3 {
+        width: 300px;
+        height: 40px;
+    }
+    
+    #contact > #emailContainer > #emailBox > button {
+        width: 100px;
+        height: 35px;
+    }
+    
     footer {
-        height: 450px;
+        height: 410px;
     }
 
     footer > img {
         width: 50px; 
         height: 50px; 
+        margin-top: 40px;
     }
     
     footer > #social-media {
@@ -604,6 +672,7 @@ footer > p {
     footer > #social-media > div {
         width: 50%;
         height: 55px;
+        margin-top: 3%;
     }
     
     footer > #social-media > div > img {
@@ -617,7 +686,11 @@ footer > p {
         font-size: 0.9rem;
     }
      
+    footer > #social-media > div > h3 p {
+        font-size: 11.8px;
+    }
+
     footer > p {
-        margin: 20px auto;
+        margin: 10px auto;
     }
 }
