--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ p {
     font-weight: 300;
 }
 
+/* NAVCONTAINER STYLE */
 #navContainer {
     width: 55%;
     margin: 0 auto;
@@ -44,48 +45,42 @@ p {
     z-index: 999;
     background-color: #e6e2e2;
 }
-
 #navContainer > .nav-bar > i {
     margin-left: 30px;
     font-size: 20px;
     cursor: pointer;
 }
-
 #navContainer > .nav-bar > img {
     display: block;
     margin: 0 70px 0 130px;
 }
-
 #navContainer > img {
     display: none;
 }
-
 #navContainer > i#listMenu {
     display: none;
     margin-top: 1%;
     font-size: 30px;
 }
-
 #navContainer > .nav-bar {
     height: 50px;
     display: flex;
     align-items: center;
 }
-
 #navContainer > .nav-bar > a {
     margin-right: 50px;
     text-decoration: none;
     font-size: 1.1rem;
     color: black;
 }
-
 #navContainer > .nav-bar > a:hover {
     text-decoration: underline;
     font-size: 1.2rem;
     color: #00a0dc;
 }
 
-div#sidebarBackground {
+/* SIDEBARBACKGROUND STYLE */
+#sidebarBackground {
     background-color: rgba(0, 0, 0, 0.7);
     visibility: hidden;
     position: fixed;
@@ -94,7 +89,8 @@ div#sidebarBackground {
     height: 100vh;
 }
 
-div#sidebar {
+/* SIDEBAR STYLE */
+#sidebar {
     display: none;
     padding-bottom: 16px;
     position: fixed;
@@ -107,8 +103,7 @@ div#sidebar {
     background-color: white;
     z-index: 999;
 }
-
-div#sidebar > div {
+#sidebar > div {
     width: 90%;
     margin: 0 auto;
     padding-top: 10px;
@@ -116,19 +111,16 @@ div#sidebar > div {
     justify-content: space-between; 
     border-bottom: 1px solid black;
 }
-
-div#sidebar > div i {
+#sidebar > div i {
     font-size: 25px;
 }
-
-div#sidebar > ul {
+#sidebar > ul {
     margin-right: 20px;
     display: flex;
     flex-direction: column;
     align-items: start;
 }
-
-div#sidebar > ul {
+#sidebar > ul {
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -136,18 +128,17 @@ div#sidebar > ul {
     padding: 16px;
     margin-top: 16px;
 }
-
-div#sidebar > ul > li > a {
+#sidebar > ul > li > a {
     all: unset;
     color: black;
     cursor: pointer;
     transition: all 0.3s;
 }
-  
-div#sidebar > ul > li > a:hover {
+#sidebar > ul > li > a:hover {
     text-decoration: underline;
 }
 
+/* HERO STYLE */
 #hero {
     width: 90%;
     margin: 7% auto 0 auto;
@@ -159,53 +150,45 @@ div#sidebar > ul > li > a:hover {
     scroll-margin-top: 15em;
     text-align: left;
 }
-
 #hero > img {
     width: 25%;
     height: 25%;
     border-radius: 50%;
 }
-
 #hero > #heroText > h3 {
     margin-top: 15px;
 }
-
 #hero > #heroText > h1 {
     margin-top: 10px;
 }
-
 #hero > #heroText > p {
     margin-top: 30px;
 }
 
+/* ABOUT STYLE */
 #about {
     margin: 20% auto 0 auto;
     width: 90%;
 }
-
 #about h1 {
     margin-bottom: 5%;
     text-align: center;
 }
-
 #about > #box {
     margin-top: 30px;
     display: flex;
     flex-direction: row;
     gap: 30px;
 }
-
 #about > #box > .text > p {
     line-height: 35px;
 }
-
 #about > #box > .text > #insideBox {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 3%;
 }
-
 #about > #box > .text > #insideBox > div {
     height: 300px;
     margin-top: 70px;
@@ -213,7 +196,6 @@ div#sidebar > ul > li > a:hover {
     border-radius: 20px;
     background-color: #e9f2f5;
 }
-
 #about > #box > .text > #insideBox > div h2 {
     margin-bottom: 10px;
     border-bottom: 1px solid rgb(112, 81, 81);
@@ -222,30 +204,28 @@ div#sidebar > ul > li > a:hover {
     padding-top: 5px;
     list-style: none;
 }
-
 #about > #box > .img img {
     width: 75%;
     height: 90%;
+    margin-left: 12.5%;
     border-radius: 20px;
 }
 
+/* PROJECTS STYLE */
 #projects {
     width: 50%;
     margin: 5% auto 0 auto;
 }
-
 #projects > h1 {
     margin-bottom: 10%;
     text-align: center;
 }
-
 #projects > #container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 2%;
 }
-
 /* Common styles for all projects div */
 #projects > #container > #left > div,
 #projects > #container > #right > div {
@@ -260,16 +240,13 @@ div#sidebar > ul > li > a:hover {
     background-repeat: no-repeat;
     transition: all 0.4s ease-in-out;
 }
-
 #projects > #container > #left .left-one,
 #projects > #container > #right .right-two {
     height: 600px;
 }
-
 #projects > #container > div h3 {
     margin-bottom: 7%;
 }
-
 #projects > #container > div button {
     margin: 10px 0 0 120px;
     padding: 5px;   
@@ -278,60 +255,51 @@ div#sidebar > ul > li > a:hover {
     border-radius: 20px;
     border-color: #5abff5;
 }
-
 /* Specific background images and positions */
 #projects > #container > #left > .left-one {
     background-image: url(assets/pacman.png);
     background-position-y: 200px;
 }
-
 #projects > #container > #left > .left-two {
     background-image: url(assets/taskapp.png);
     background-position-y: 200px;
 }
-
 #projects > #container > #right > .right-one {
     background-image: url(assets/quotegenerator.png);
     background-position-y: 200px;
 }
-
 #projects > #container > #right > .right-two {
     background-image: url(assets/passwordgenerator.png);
     background-position-y: 230px;
 }
 
+/* SKILLS STYLE */
 #skills {
     width: 80%;
     margin: 10% auto;
     scroll-margin-top: 9em;
 }
-
 #skills h1 {
     margin-bottom: 10%;
     text-align: center;
 }
-
-#skills > #skillContainer .skill {
-    margin: 50px 0;
-}
-
-#skills > #skillContainer > .skill > .skill-name {
-    margin-bottom: 15px;
-    display: flex;
-    justify-content: space-between;
-}
-
 #skills > #logoSkills {
     display: flex;
     justify-content: center;
     gap: 10%;
 }
-
 #skills > #logoSkills > img {
     width: 70px;
     height: 70px;
 }
-
+#skills > #skillContainer .skill {
+    margin: 50px 0;
+}
+#skills > #skillContainer > .skill > .skill-name {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+}
 #skills > #skillContainer > .skill > .skill-bar {
     width: 100%;
     background-color: gray;
@@ -339,22 +307,20 @@ div#sidebar > ul > li > a:hover {
     border-radius: 5px;
     overflow: hidden;
 }
-
 #skills > #skillContainer > .skill > .skill-bar > .skill-level {
     height: 100%;
     background-color: orange;
 }
 
+/* CONTACT STYLE */
 #contact {
     width: 90%;
     margin: 0 auto;
 }
-
 #contact h1 {
     padding-top: 1%;
     text-align: center;
 }
-
 #contact > #emailContainer {
     width: 40%;
     height: 430px;
@@ -364,13 +330,11 @@ div#sidebar > ul > li > a:hover {
     border-radius: 20px;
     background-color: #f3f1f1;
 }
-
 #contact > #emailContainer > #emailBox {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
-
 #contactInput1, #contactInput2, #contactInput3 {
     width: 500px;
     height: 50px;
@@ -382,13 +346,11 @@ div#sidebar > ul > li > a:hover {
     color: #666;
     background-color: #ffffff;
 }
-
 #contact > #emailContainer > #emailBox > textarea {
     height: 140px;
     padding-top: 20px;
     border-radius: 20px;
 }
-
 #contact > #emailContainer > #emailBox > button {
     width: 150px;
     height: 40px;
@@ -399,19 +361,13 @@ div#sidebar > ul > li > a:hover {
     border-color: #5abff5;
 }
 
+/* FOOTER SECTION */
 footer {
     width: 100%;
     height: 400px;
     margin-top: 10%;
     text-align: center;
     background-color: #e6e2e2;
-}
-
-footer > img {
-    margin-top: 70px;
-    width: 100px; 
-    height: 100px; 
-    border-radius: 50%;
 }
 
 footer > #social-media {
@@ -431,55 +387,49 @@ footer > #social-media > div {
     border-radius: 20px;
     outline: 0;
     cursor: pointer;
-}
-
-footer > #social-media > div.instagram,
-footer > #social-media > div.linkedin,
-footer > #social-media > div.github,
-footer > #social-media > div.gmail {
     background: #f3f1f1;
 }
-
 footer > #social-media > div:hover {
     color: white;
 }
-
 footer > #social-media > div.instagram:hover {
     background: linear-gradient(90deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
 }
-
 footer > #social-media > div.linkedin:hover {
     background: linear-gradient(45deg, #0077b5, #00a0dc);
 }
-
 footer > #social-media > div.github:hover {
     background: linear-gradient(90deg, #24292e,#2b3137);
 }
-
 footer > #social-media > div.gmail:hover {
     background: linear-gradient(90deg, #ff4343, #ff5d5d, #b9b5b5);
 }
-
 footer > #social-media > div > img {
     width: 50px;
     height: 50px;
     margin: 17px 0 20px 15px;
 }
-
 footer > #social-media > div > h3 {
     height: 30px;
     margin: 20px 0 0 10px;
 }
-
 footer > #social-media > div > h3 p {
     font-size: 17px;
 }
-
+/* logo */
+footer > img {
+    margin-top: 70px;
+    width: 100px; 
+    height: 100px; 
+    border-radius: 50%;
+}
+/* copyright */
 footer > p {
     text-align: center;
     margin: 50px auto;
 }
 
+/* mobile responsive */
 @media (max-width: 470px) {
     
     h1 {
@@ -498,6 +448,7 @@ footer > p {
         font-size: 0.7rem;
     }
 
+    /* NAVCONTAINER STYLE */
     #navContainer {
         width: 100%;
         height: 50px;
@@ -510,23 +461,22 @@ footer > p {
         background-color: #eae9e9;
         z-index: 1;
     }
-
     #navContainer > img {
         display: block;
     }
-
     #navContainer > i#listMenu {
         display: inline-block;
     }
-
     #navContainer > .nav-bar{
         display: none;
     }
 
-    div#sidebar {
+    /* SIDEBAR STYLE */
+    #sidebar {
         display: block; 
     }
     
+    /* HERO STYLE */
     #hero {
         width: 90%;
         margin: 12% auto 0 auto;
@@ -535,47 +485,39 @@ footer > p {
         scroll-margin-top: 15em;
         text-align: center;
     }
-    
     #hero > img {
         width: 175px;
         height: 200px;
     }
-    
     #hero > #heroText > h3 {
         margin-top: 20px;
     }
-    
     #hero > #heroText > h1 {
         margin-top: 15px;
     }
-    
     #hero > #heroText > p {
         margin-top: 20px;
     }
 
+    /* ABOUT STYLE */
     #about > #box {
         flex-direction: column;
     }
-    
     #about > #box > .text > p {
         line-height: 27px;
     }
-
     #about > #box > .text > #insideBox {
         flex-direction: column;
     }
-    
     #about > #box > .text > #insideBox > div {
         height: 250px;
         margin-top: 20px;
     }
-    
     #about > #box > .text > #insideBox > .experience > div > ul li {
         padding-top: 5px;
         list-style: none;
         font-size: 13px;
     }
-    
     #about > #box > .img img {
         display: none;
         width: 250px;
@@ -583,30 +525,27 @@ footer > p {
         border-radius: 20px;
     }
 
+    /* PROJECTS STYLE */
     #projects {
         width: 50%;
         margin: 10% auto 0 auto;
     }
-    
     #projects > #container {
         display: flex;
         flex-direction: row;
         justify-content: center;
         gap: 2%;
     }
-    
     #projects > #container > #left > div,
     #projects > #container > #right > div {
         margin-top: 5%;
         width: 200px;
         background-size: 180px;
     }
-    
     #projects > #container > #left .left-one,
     #projects > #container > #right .right-two {
         height: 460px;
     }
-   
     #projects > #container > div button {
         width: 90px;
         height: 30px;
@@ -615,16 +554,15 @@ footer > p {
         font-size: 13px;
     }
     
+    /* SKILLS STYLE */
     #skills {
         width: 80%;
         margin: 15% auto;
     }
-    
     #skills > #logoSkills > img {
         width: 40px;
         height: 40px;
     }
-
     #skills > #skillContainer > .skill > .skill-name {
         margin-bottom: 15px;
         display: flex;  
@@ -632,58 +570,51 @@ footer > p {
         font-size: 13px;
     }
 
+    /* CONTACT STYLE */
     #contact > #emailContainer {
         width: 90%;
     }
-    
     #contactInput1, #contactInput2, #contactInput3 {
         width: 300px;
         height: 40px;
     }
-    
     #contact > #emailContainer > #emailBox > button {
         width: 100px;
         height: 35px;
     }
     
+    /* FOOTER STYLE */
     footer {
         height: 410px;
     }
-
     footer > img {
         width: 50px; 
         height: 50px; 
         margin-top: 40px;
     }
-    
     footer > #social-media {
         height: 270px;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
     }
-    
     footer > #social-media > div {
         width: 50%;
         height: 55px;
         margin-top: 3%;
     }
-    
     footer > #social-media > div > img {
         width: 20px;
         height: 20px;
     }
-    
     footer > #social-media > div > h3 {
         height: 30px;
         margin: 9px 0 0 10px;
         font-size: 0.9rem;
     }
-     
     footer > #social-media > div > h3 p {
         font-size: 11.8px;
     }
-
     footer > p {
         margin: 10px auto;
     }
